# astrodx-batch-downloader

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
collections/DX Chart/: manifest.json
collections/Original/: manifest.json
collections/POPSアニメ/: manifest.json
collections/SD Chart/: manifest.json
collections/maimai/: manifest.json
collections/maimai DX/: manifest.json
collections/maimai DX BUDDiES/: manifest.json
collections/maimai DX BUDDiES PLUS/: manifest.json
collections/maimai DX CiRCLE/: manifest.json
collections/maimai DX FESTiVAL/: manifest.json
collections/maimai DX FESTiVAL PLUS/: manifest.json
collections/maimai DX PLUS/: manifest.json
collections/maimai DX PRiSM/: manifest.json
collections/maimai DX PRiSM PLUS/: manifest.json
collections/maimai DX Splash/: manifest.json
collections/maimai DX Splash PLUS/: manifest.json
collections/maimai DX UNiVERSE/: manifest.json
collections/maimai DX UNiVERSE PLUS/: manifest.json
collections/maimai FiNALE/: manifest.json
collections/maimai GreeN/: manifest.json
collections/maimai GreeN PLUS/: manifest.json
collections/maimai MURASAKi/: manifest.json
collections/maimai MURASAKi PLUS/: manifest.json
collections/maimai MiLK PLUS/: manifest.json
docs/: tutorial.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundler.rs  collections.rs  downloader.rs  lib.rs  main.rs  models.rs
(+25 files in other folders)
