[package]
name = "niconico_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "niconico_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
parking_lot = "0.12"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2"
